--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="container">
 	<div>
 		<table><tr>
-		<td><img src="../mahajan steel/logo.png" width="200" height="175"></td><td><h2>Trusted All over India</h2></td>
+		<td><img src="https://5.imimg.com/data5/SELLER/Logo/2021/7/WF/IT/TB/2534160/inactive.PNG" width="200" height="175"></td><td><h2>Trusted All over India</h2></td>
 		</tr>
 		<tr><td colspan="2">
 			<b>Mahajan Steel</b>is a trusted brand located in Dinanagar,Punjab,India.<br>we forge more than just steel — we forge trust, strength, and excellence.<br> Committed to delivering high-performance steel solutions, we serve industries that shape the future with<br> innovation and durability. Every product reflects our dedication to precision, quality,<br> and sustainability. From construction to manufacturing and infrastructure, we empower<br> progress with world-class steel that’s made to endure and built to inspire. 
@@ -208,4 +208,5 @@
 </div>
 	<script src="script.js"></script>
 </body>
+
 </html>
