--- a/aboutus.html
+++ b/aboutus.html
@@ -27,7 +27,7 @@
 		<a href="aboutus.html">About us</a>
 	</div>
 	<div class="container">
-		<div><img src="../mahajan steel/logo2.png" height="300px" width="300px"></div>
+		<div><img src="https://5.imimg.com/data5/SELLER/Logo/2021/7/WF/IT/TB/2534160/inactive.PNG" height="300px" width="300px"></div>
 		<div><h2>Mahajan Steel Enterprises</h2><h4>Established in Year 1993, “Mahajan Steel Enterprises” is Manufacturer Of MCB Distribution Board, Electrical Juntion Box, Ceilling Fan Downrod Etc.</h4>
 			<div class="container">
 			<div>
@@ -135,4 +135,5 @@
 </div>
 	<script src="script.js"></script>
 </body>
+
 </html>
