--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<td><img src="https://5.imimg.com/data5/SELLER/Logo/2021/7/WF/IT/TB/2534160/inactive.PNG" width="200" height="175"></td><td><h2>Trusted All over India</h2></td>
 		</tr>
 		<tr><td colspan="2">
-			<b>Mahajan Steel</b>is a trusted brand located in Dinanagar,Punjab,India.<br>we forge more than just steel — we forge trust, strength, and excellence.<br> Committed to delivering high-performance steel solutions, we serve industries that shape the future with<br> innovation and durability. Every product reflects our dedication to precision, quality,<br> and sustainability. From construction to manufacturing and infrastructure, we empower<br> progress with world-class steel that’s made to endure and built to inspire. 
+			<b>Mahajan Steel Enterprises</b>is a trusted brand located in Dinanagar,Punjab,India.<br>we forge more than just steel — we forge trust, strength, and excellence.<br> Committed to delivering high-performance steel solutions, we serve industries that shape the future with<br> innovation and durability. Every product reflects our dedication to precision, quality,<br> and sustainability. From construction to manufacturing and infrastructure, we empower<br> progress with world-class steel that’s made to endure and built to inspire. 
 		</td></tr></table>
 	</div>
 	<div>
@@ -210,3 +210,4 @@
 </body>
 
 </html>
+
