--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
     src="https://www.canva.com/design/DAG41eYvLa0/Qjmgvn5x2dcOVC1fDzILSA/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
-  </iframe>
+  </iframe></div>
 		<div class="container">
 	<div>
 		<table><tr>
@@ -215,5 +215,6 @@
 </body>
 
 </html>
+
 
 
