--- a/cpipe.html
+++ b/cpipe.html
@@ -29,8 +29,9 @@
 		<a href="aboutus.html">About us</a>
 
 	</div>
-	<h1>Conduit Pipe</h1>
-		<p>A conduit pipe is a protective tube used to route and shield electrical wires from damage. It ensures safety, organizes wiring, and prevents exposure to moisture or physical impact.
+		<div class="body">
+	<h1 style="color: white;">Conduit Pipe</h1>
+		<p style="color: white;">A conduit pipe is a protective tube used to route and shield electrical wires from damage. It ensures safety, organizes wiring, and prevents exposure to moisture or physical impact.
 </p>
 	<div class="container">
 	<div>
@@ -154,7 +155,7 @@
 			<button onclick="openWebsite6()"><b>Buy now</b></button>
 		</div>
 	</div>
-	
+	</div>
 	<div class="downbar">
 	<table width="100%" class="last">
 <tr>
