--- a/fanbox.html
+++ b/fanbox.html
@@ -28,9 +28,10 @@
 		<a href="contact us.html">Contact us</a>
 		<a href="aboutus.html">About us</a>
 	</div>
+	<div class="body">
 	<div>
-		<h1>Ceiling Fan Box</h1>
-		<p>Electric fans have a motor that moves blades that are attached to a central rotating hub. Other common power sources for fans include internal-combustion engines and steam or gas turbines. Fans circulate air to cool and ventilate rooms and to control humidity.</p>
+		<h1 style="color: white;">Ceiling Fan Box</h1>
+		<p style="color: white;">Electric fans have a motor that moves blades that are attached to a central rotating hub. Other common power sources for fans include internal-combustion engines and steam or gas turbines. Fans circulate air to cool and ventilate rooms and to control humidity.</p>
 	</div>
 	<div class="container">
 		<div class="div2">
@@ -194,6 +195,7 @@
 			</table>
 			<button onclick="openWebsite()"><b>Buy now</b></button>
 		</div>
+</div>
 </div>
 	<div class="downbar">
 	<table width="100%" class="last">
