--- a/fanclamp.html
+++ b/fanclamp.html
@@ -28,9 +28,10 @@
 		<a href="contact us.html">Contact us</a>
 		<a href="aboutus.html">About us</a>
 	</div>
+	<div class="body">
 	<div>
-		<h1>Ceiling Fan Clamp</h1>
-		<p>A ceiling fan clamp is used to secure the downrod of a ceiling fan to the mounting bracket. The clamp is typically a metal band or collar that fits around the downrod and is attached to the mounting bracket using screws or bolts.</p>
+		<h1 style="color: white;">Ceiling Fan Clamp</h1>
+		<p style="color: white;">A ceiling fan clamp is used to secure the downrod of a ceiling fan to the mounting bracket. The clamp is typically a metal band or collar that fits around the downrod and is attached to the mounting bracket using screws or bolts.</p>
 	</div>
 	<div class="container">
 		<div>
@@ -114,6 +115,7 @@
 			<button onclick="openWebsite2()"><b>Buy now</b></button>
 		</div>
 	</div>
+</div>
 		<div class="downbar">
 	<table width="100%" class="last">
 <tr>
