--- a/fandownrod.html
+++ b/fandownrod.html
@@ -26,9 +26,10 @@
 		<a href="contact us.html">Contact us</a>
 		<a href="aboutus.html">About us</a>
 	</div>
+	<div class="body">
 	<div>
-		<h1>Ceiling Fan Downrod</h1>
-		<p>A fan downrod is a metal rod that connects the ceiling fan to the mounting bracket, lowering it from the ceiling. It improves air circulation, reduces wobbling, and positions the fan at the ideal height for efficiency and safety.</p>
+		<h1 style="color: white;">Ceiling Fan Downrod</h1>
+		<p style="color: white;">A fan downrod is a metal rod that connects the ceiling fan to the mounting bracket, lowering it from the ceiling. It improves air circulation, reduces wobbling, and positions the fan at the ideal height for efficiency and safety.</p>
 	</div>
 	<div class="container">
 		<div>
@@ -192,6 +193,7 @@
 			<button onclick="openWebsite3()"><b>Buy now</b></button>
 		</div>
 	</div>
+</div>
 	<div class="downbar">
 	<table width="100%" class="last">
 <tr>
