--- a/mcbboard.html
+++ b/mcbboard.html
@@ -28,11 +28,13 @@
 		<a href="contact us.html">Contact us</a>
 		<a href="aboutus.html">About us</a>
 	</div>
-	<h1>MCB Board</h1>
-		<p>An MCB board (Miniature Circuit Breaker board) is an electrical panel that distributes power to different circuits in a building. It automatically cuts off electricity during overloads or short circuits, protecting appliances and wiring from damage.
+	<div class="body">
+	<h1 style="color: white;">MCB Board</h1>
+		<p style="color: white;">An MCB board (Miniature Circuit Breaker board) is an electrical panel that distributes power to different circuits in a building. It automatically cuts off electricity during overloads or short circuits, protecting appliances and wiring from damage.
 </p>
 	<div class="container">
 		<div>
+			<h3>8 Way MCB Box</h3>
 			<table>
 			<tr>
 				<td><img src="https://5.imimg.com/data5/IOS/Default/2025/8/538689488/AN/BK/DU/2534160/product-jpeg-500x500.jpeg" height="250px" width="250px"></td>
@@ -40,7 +42,7 @@
 			<tr>
 				<td>
 					<table>
-						<tr>8 Way MCB Box</tr>
+						<!-- <tr>8 Way MCB Box</tr> -->
 						<tr>
 							<td>Connection Type</td>
 							<td>8 Way</td>
@@ -76,6 +78,7 @@
 			<button onclick="openWebsite4()"><b>Buy now</b></button>
 		</div>
 		<div>
+			<h3>4 Way MCB Box</h3>
 			<table>
 			<tr>
 				<td><img src="https://5.imimg.com/data5/ANDROID/Default/2024/10/456051367/PE/ZO/RF/2534160/product-jpeg-500x500.jpg" height="250px" width="250px"></td>
@@ -83,7 +86,7 @@
 			<tr>
 				<td>
 					<table>
-						<tr>4 Way MCB Box</tr>
+						<!-- <tr>4 Way MCB Box</tr> -->
 						<tr>
 							<td>Connection Type</td>
 							<td>4 Way</td>
@@ -119,6 +122,7 @@
 			<button onclick="openWebsite4()"><b>Buy now</b></button>
 		</div>
 			<div>
+				<h3>12 Way MCB Box</h3>
 			<table>
 			<tr>
 				<td><img src="https://5.imimg.com/data5/ANDROID/Default/2024/10/456054727/XN/UR/UE/2534160/product-jpeg-500x500.jpg" height="250px" width="250px"></td>
@@ -126,7 +130,7 @@
 			<tr>
 				<td>
 					<table>
-						<tr>12 Way MCB Box</tr>
+						<!-- <tr>12 Way MCB Box</tr> -->
 						<tr>
 							<td>Connection Type</td>
 							<td>12 Way</td>
@@ -162,6 +166,7 @@
 			<button onclick="openWebsite4()"><b>Buy now</b></button>
 		</div>
 		<div>
+			<h3>6 Way MCB Box</h3>
 			<table>
 			<tr>
 				<td><img src="https://5.imimg.com/data5/ANDROID/Default/2024/10/456045809/HW/ZA/PZ/2534160/product-jpeg-500x500.jpg" height="250px" width="250px"></td>
@@ -169,7 +174,7 @@
 			<tr>
 				<td>
 					<table>
-						<tr>6 Way MCB Box</tr>
+						<!-- <tr>6 Way MCB Box</tr> -->
 						<tr>
 							<td>Connection Type</td>
 							<td>6 Way</td>
