--- a/metalbox.html
+++ b/metalbox.html
@@ -28,8 +28,9 @@
 		<a href="contact us.html">Contact us</a>
 		<a href="aboutus.html">About us</a>
 	</div>
-	<h1>Metal Box</h1>
-		<p>A concealed metal box is an electrical box installed inside walls to safely house switches, sockets, or wiring connections. It provides protection and a clean, hidden look for electrical fittings.
+	<div class="body">
+	<h1 style="color: white;">Metal Box</h1>
+		<p style="color: white;">A concealed metal box is an electrical box installed inside walls to safely house switches, sockets, or wiring connections. It provides protection and a clean, hidden look for electrical fittings.
 </p>
 	<div class="container">
 	
