--- a/mscpipe.html
+++ b/mscpipe.html
@@ -26,8 +26,10 @@
 		<a href="contact us.html">Contact us</a>
 		<a href="aboutus.html">About us</a>
 	</div>
-	<h1>MS Conduit Pipe</h1>
-		<p>
+	
+		<div class="body">
+	<h1 style="color: white;">MS Conduit Pipe</h1>
+		<p style="color: white;">
 			An MS conduit pipe (Mild Steel conduit pipe) is a durable metal tube used to protect and route electrical wiring. It offers strong mechanical protection, making it ideal for industrial and commercial electrical installations.
 
 </p>
@@ -114,7 +116,7 @@
 		</div>
 		
 	</div>
-	
+	</div>
 	<div class="downbar">
 	<table width="100%" class="last">
 <tr>
