--- a/form.html
+++ b/form.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <title>WhatsApp Inquiry Form</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
+<div class="buynow">
 
-<h2>Send Inquiry on WhatsApp</h2>
 
 <form id="whatsappForm">
+<h2>Send Inquiry on WhatsApp</h2>
 
     <input type="text" id="name" placeholder="Name" required><br><br>
 
@@ -31,7 +33,7 @@
     <button type="submit">Send to WhatsApp</button>
 
 </form>
-
+</div>
 <script src="script2.js"></script>
 
 </body>
