--- a/form.html
+++ b/form.html
@@ -26,7 +26,7 @@
 
     <input type="text" id="product" placeholder="Product" required><br><br>
 
-    <input type="number" id="quantity" placeholder="Quantity" required><br><br>
+    <input type="text" id="quantity" placeholder="Quantity" required><br><br>
 
     <textarea id="message" placeholder="Your message" required></textarea><br><br>
 
@@ -38,3 +38,4 @@
 
 </body>
 </html>
+
