--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div>
 	<table border="2px">
 		<tr>
-				<td rowspan="2"><img src="https://cdn-icons-png.flaticon.com/512/4190/4190372.png" height="150px" width="150px"></td>
+				<td rowspan="2"><img src="https://i.gifer.com/origin/c5/c5f36cbf85f0dd53cca234142247416f.gif" height="150px" width="150px"></td>
 				<td><b>Nature of Business</b></td>
 			</tr>
 			<tr>
@@ -110,7 +110,7 @@
 				<td>01-07-2017</td>
 			</tr>
 			<tr>
-				<td rowspan="2"><img src="https://img.freepik.com/premium-vector/red-pin-location-vector-design_1319560-39851.jpg" height="150px" width="150px"></td>
+				<td rowspan="2"><img src="https://media.tenor.com/V994Pis5f7cAAAAi/location-maps.gif" height="150px" width="150px"></td>
 				<td><b>Location</b></td>
 			</tr>
 			<tr>
@@ -124,7 +124,7 @@
 			
 		
 			<tr>
-				<td rowspan="2"><img src="https://clipground.com/images/clipart-gst-4.jpg" height="150px" width="150px"></td>
+				<td rowspan="2"><img src="https://static.gujaratsamachar.com/content_image/content_image_b817b84b-f9f1-444e-9919-4eb03cef1011.gif" height="150px" width="150px"></td>
 				<td><b>GST Number</b></td>
 			</tr>
 			<tr>
@@ -242,5 +242,6 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
 
 
