--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
 	</div>
 	<div class="body">
 	<div class="container">
-		<div><img src="https://5.imimg.com/data5/SELLER/Logo/2021/7/WF/IT/TB/2534160/inactive.PNG" height="300px" width="300px"></div>
+		<div><img src="https://github.com/mahajansteel/mahajansteel/blob/main/mahajan_logo3.png?raw=true" height="300px" width="300px"></div>
 		<div><h2>Mahajan Steel Enterprises</h2><h4>Established in Year 1993, “Mahajan Steel Enterprises” is Manufacturer Of MCB Distribution Board, Electrical Juntion Box, Ceilling Fan Downrod Etc.</h4>
 			<div class="container">
 			<div>
@@ -144,4 +144,5 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
 
