--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="container">
 	<div>
 		<table><tr>
-		<td><img src="https://github.com/mahajansteel/mahajansteel/blob/main/mahajan_logo3.png?raw=true" width="200" height="175"></td><td><h2>Trusted All over India</h2></td>
+		<td><img src="https://github.com/mahajansteel/mahajansteel/blob/main/mahajan_logo-removebg-preview%20(3).png?raw=true" width="200" height="175"></td><td><h2>Trusted All over India</h2></td>
 		</tr>
 		<tr><td colspan="2">
 			<b>Mahajan Steel Enterprises</b> delivers premium-grade steel designed for strength, durability, and unmatched performance in <br>every application. We manufacture steel that meets global standards, ensuring reliability in construction, infrastructure,<br> and industrial projects. With advanced production technology and rigorous quality control,<br> every product is tested for precision and long-term endurance. Our team focuses on innovation, consistently<br> improving materials to meet modern engineering needs. We provide a wide range of steel products tailored <br>to diverse industries and project requirements. Customer satisfaction is our priority, and we work closely <br>with clients to understand their needs. Our expertly engineered steel ensures safety, efficiency, and <br>cost-effectiveness. We offer flexible order sizes, making us suitable for both large-scale and small<br> projects. With quick delivery and seamless service, we ensure your work never stops. Our commitment to<br> quality has earned the trust of architects, builders, and manufacturers across the region. We follow eco-friendly<br> processes to reduce waste and support sustainable development. Transparency in pricing and service makes <br>us a reliable partner for long-term collaborations. Our skilled workforce ensures flawless <br>production from start to finish. We continue to invest in technology to offer stronger and more efficient<br> steel solutions. Our customer support team is always available to guide you throughout the process. Whether<br> you need structural steel, customized fabrication, or special-grade material, we’ve got you covered.<br> With years of expertise, we stand as a symbol of strength in the steel industry. Choose us for steel<br> that delivers performance, consistency, and peace of mind. 
@@ -242,6 +242,7 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
 
 
 
