--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
 	</div>
 	<div class="body">
 	<div class="container">
-		<div><img src="https://github.com/mahajansteel/mahajansteel/blob/main/mahajan%20logo%20(2).png?raw=true" height="200px" width="200px"><br style="color:white"><h1>About Us</h1></div>
+		<div><img src="https://github.com/mahajansteel/mahajansteel/blob/main/mahajan%20logo%20(2).png?raw=true" height="200px" width="200px"></div>
 		<div><h2>Mahajan Steel Enterprises</h2><h4>Established in Year 1993, “Mahajan Steel Enterprises” is Manufacturer Of MCB Distribution Board, Electrical Juntion Box, Ceilling Fan Downrod Etc.</h4>
 			<div class="container">
 			<div>
@@ -144,6 +144,7 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
 
 
 
