--- a/contact us.html
+++ b/contact us.html
@@ -9,9 +9,9 @@
 
 </head>
 <body>
-	<div class="navbar">
-		<h1>Mahajan Steel Enterprise</h1>
-		<a href="index.html">Home</a>
+	
+<div class="navbar2"><h1>Mahajan Conduit & Electricals PVT. LTD.</h1>
+<a href="index.html">Home</a>
 		<div class="dropdown">
   <a href="#" class="dropbtn" onclick="toggleMenu()">Our Product ▼</a>
   <div class="dropdown-content" id="menu">
@@ -26,7 +26,7 @@
 </div>
 		<a href="contact us.html">Contact us</a>
 		<a href="aboutus.html">About us</a>
-	</div>
+</div>
 	<div class="body">
 	<div>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d502.3546568446629!2d75.46132861869799!3d32.11179998350499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b8eedb1e37741%3A0xb43152f8ff5eabf8!2sMahajan%20Steel%20Enterprises%2C%20dinanagar!5e0!3m2!1sen!2sin!4v1762487755434!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -116,3 +116,4 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
