--- a/cpipe.html
+++ b/cpipe.html
@@ -8,9 +8,9 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-<div class="navbar">
-		<h1>Mahajan Steel Enterprise</h1>
-		<a href="index.html">Home</a>
+
+<div class="navbar2"><h1>Mahajan Conduit & Electricals PVT. LTD.</h1>
+<a href="index.html">Home</a>
 		<div class="dropdown">
   <a href="#" class="dropbtn" onclick="toggleMenu()">Our Product ▼</a>
   <div class="dropdown-content" id="menu">
@@ -21,14 +21,11 @@
     <a href="fandownrod.html">Ceiling Fan Downrod</a>
     <a href="mcbboard.html">MCB Distribution Board</a>
     <a href="metalbox.html">Concealed Metal Box</a>
-    
-    
   </div>
 </div>
 		<a href="contact us.html">Contact us</a>
 		<a href="aboutus.html">About us</a>
-
-	</div>
+</div>
 		<div class="body">
 	<h1 style="color: white;">Conduit Pipe</h1>
 		<p style="color: white;">A conduit pipe is a protective tube used to route and shield electrical wires from damage. It ensures safety, organizes wiring, and prevents exposure to moisture or physical impact.
@@ -207,3 +204,4 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
