--- a/fanclamp.html
+++ b/fanclamp.html
@@ -8,9 +8,9 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-<div class="navbar">
-		<h1>Mahajan Steel Enterprise</h1>
-		<a href="index.html">Home</a>
+
+<div class="navbar2"><h1>Mahajan Conduit & Electricals PVT. LTD.</h1>
+<a href="index.html">Home</a>
 		<div class="dropdown">
   <a href="#" class="dropbtn" onclick="toggleMenu()">Our Product ▼</a>
   <div class="dropdown-content" id="menu">
@@ -21,13 +21,11 @@
     <a href="fandownrod.html">Ceiling Fan Downrod</a>
     <a href="mcbboard.html">MCB Distribution Board</a>
     <a href="metalbox.html">Concealed Metal Box</a>
-    
-    
   </div>
 </div>
 		<a href="contact us.html">Contact us</a>
 		<a href="aboutus.html">About us</a>
-	</div>
+</div>
 	<div class="body">
 	<div>
 		<h1 style="color: white;">Ceiling Fan Clamp</h1>
@@ -167,3 +165,4 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
