--- a/contact us.html
+++ b/contact us.html
@@ -49,16 +49,16 @@
 		<h1>Please write us<br> your suggestions</h1>
 	<table>
 	<tr>
-	<td><input type="text" name="name" placeholder="Full Name" required></td>
+	<td><input type="text" name="name" placeholder="Full Name" required></td></tr><tr>
 	<td><input type="text" name="" placeholder="Address"></td>
 	</tr>
 	<tr>
-	<td><input type="text" name="city" placeholder="City"></td>
+	<td><input type="text" name="city" placeholder="City"></td></tr><tr>
 	<td><input type="text" name="state" placeholder="State"></td>
 	</tr>
-	<td><input type="text" name="email" placeholder="Email" required></td>
+	<td><input type="text" name="email" placeholder="Email" required></td></tr><tr>
 	<td><input type="text" name="phone" placeholder="Phone" ></td>
-	<tr><td colspan="2">
+	<tr><td>
 	<textarea name="message" placeholder="Message"></textarea>
 	</td></tr>
 	<tr><td><input type="hidden" name="_subject" value="New message from website!"></td></tr>
@@ -119,6 +119,7 @@
 	<script src="script.js"></script>
 </body>
 </html>
+
 
 
 
